fix(BrowserTabWebentityNameField): add proper overflow and align

--- a/app/css/browser/browser-tab-content.styl
+++ b/app/css/browser/browser-tab-content.styl
@@ -23,8 +23,14 @@
 
 .browser-tab-toolbar-webentity {
   input {
+    border: 0
+    border-radius: var(--radius);
+    font-family: var(--font-pt);
+    font-size: 12px;
+    font-weight: bold;
     margin-right: 20px;
-    padding: 5px;
+    padding: 5px 10px;
+    text-overflow: ellipsis;
     width: 376px;
 
     @media (max-width: 1024px) {
